# mmd-physics

./: .clang_complete  CMakeLists.txt
example/: ik.cc
include/: mmd
include/mmd-physics/: armature.hpp  body.hpp  common.hpp  ik.hpp  motion.hpp
src/: armature.cc  body.cc  bone.hpp  ext.hpp  motion.cc
src/ik/: common.cc  gradient.cc
